Fix alignment on portfolio

--- a/src/styles/portfolio.scss
+++ b/src/styles/portfolio.scss
@@ -79,6 +79,10 @@
         h1{
             font-size:2.4em;
         }
+        
+        p{
+            margin:.5em;
+        }
     }
     
     .portfolio-last{
